--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -682,19 +682,23 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-sFGMfPD7iT {
-  padding-top: 17rem;
-  padding-bottom: 18rem;
-  background-image: url("../../../assets/images/img-20190909-151120-742x989.jpeg");
+.cid-sZfMbqP28W {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffb5b5;
 }
-.cid-sFGMfPD7iT .mbr-section-title {
-  text-align: center;
-  color: #353535;
+.cid-sZfMbqP28W .row {
+  align-items: center;
 }
-.cid-sFGMfPD7iT .mbr-text,
-.cid-sFGMfPD7iT .mbr-section-btn {
-  text-align: center;
-  color: #5f6366;
+@media (max-width: 991px) {
+  .cid-sZfMbqP28W .image-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sZfMbqP28W .text-wrapper {
+    padding: 0 2rem;
+  }
 }
 .cid-sFGNGNNW5A {
   padding-top: 6rem;
@@ -753,346 +757,6 @@ a {
 }
 .cid-sFGNGNNW5A .item-subtitle {
   text-align: left;
-}
-.cid-sFGNHRkFsi {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-  background-color: #fafafa;
-}
-.cid-sFGNHRkFsi .card-wrapper {
-  display: flex;
-}
-@media (max-width: 991px) {
-  .cid-sFGNHRkFsi .card-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-.cid-sFGNHRkFsi .mbr-iconfont {
-  font-size: 4rem;
-  color: #4d6d9a;
-  padding-right: 1.5rem;
-}
-.cid-sFGOTvnvck {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-.cid-sFGOTvnvck .card-wrapper {
-  padding-right: 2rem;
-}
-@media (max-width: 992px) {
-  .cid-sFGOTvnvck .card {
-    margin-bottom: 2rem!important;
-  }
-  .cid-sFGOTvnvck .card-wrapper {
-    padding: 0 1rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sFGOTvnvck .link-wrap {
-    align-items: center;
-  }
-}
-.cid-sFGOTvnvck .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-sFGS12H2E8 {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-  background-color: #ffffff;
-}
-.cid-sFGS12H2E8 .oldcost {
-  text-decoration: line-through;
-  color: #353535;
-}
-.cid-sFGS12H2E8 .currentcost {
-  color: #232323;
-}
-.cid-sFGS12H2E8 .card-wrapper {
-  border-radius: 4px;
-  background: #fafafa;
-}
-@media (min-width: 992px) {
-  .cid-sFGS12H2E8 .text-box {
-    padding: 2rem;
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-sFGS12H2E8 .text-box {
-    padding: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sFGS12H2E8 .text-box {
-    padding: 1rem;
-  }
-}
-.cid-sFGS12H2E8 .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
-}
-.cid-sFGSX04rSl {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #fafafa;
-}
-.cid-sFGSX04rSl .row {
-  margin-left: 0;
-  margin-right: 0;
-}
-.cid-sFGSX04rSl .item {
-  padding-left: 0;
-  padding-right: 0;
-}
-.cid-sFGSX04rSl .item-wrapper {
-  height: 100%;
-  position: relative;
-}
-.cid-sFGSX04rSl .item-wrapper img {
-  height: 100%;
-  object-fit: cover;
-}
-.cid-sFGSX04rSl .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
-}
-.cid-sFGSX04rSl .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-sFGSX04rSl .carousel-control,
-.cid-sFGSX04rSl .close {
-  background: #1b1b1b;
-}
-.cid-sFGSX04rSl .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-sFGSX04rSl .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-sFGSX04rSl .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-sFGSX04rSl .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-sFGSX04rSl .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-sFGSX04rSl .close::before {
-  content: '\e91a';
-}
-.cid-sFGSX04rSl .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-sFGSX04rSl .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-sFGSX04rSl .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sFGSX04rSl .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-sFGSX04rSl .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-sFGSX04rSl .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-sFGSX04rSl .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-sFGSX04rSl .carousel-indicators li.active,
-.cid-sFGSX04rSl .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-sFGSX04rSl .carousel-indicators li::after,
-.cid-sFGSX04rSl .carousel-indicators li::before {
-  content: none;
-}
-.cid-sFGSX04rSl .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-sFGSX04rSl .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-sFGSX04rSl .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sFGSX04rSl .carousel-indicators {
-    display: none;
-  }
-}
-.cid-sFGSX04rSl .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-sFGSX04rSl .carousel-inner > .active {
-  display: block;
-}
-.cid-sFGSX04rSl .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sFGSX04rSl .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-sFGSX04rSl .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-sFGSX04rSl .carousel-control,
-  .cid-sFGSX04rSl .carousel-indicators,
-  .cid-sFGSX04rSl .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sFGSX04rSl .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-sFGSX04rSl .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-sFGSX04rSl .carousel-indicators .active,
-.cid-sFGSX04rSl .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-sFGSX04rSl .carousel-indicators .active {
-  background: #fff;
-}
-.cid-sFGSX04rSl .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-sFGSX04rSl .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-sFGSX04rSl .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-sFGSX04rSl .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-sFGSX04rSl .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-sFGSX04rSl .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-sFGSX04rSl .carousel {
-  width: 100%;
-}
-.cid-sFGSX04rSl .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-sFGSX04rSl .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-sFGSX04rSl .modal.fade .modal-dialog,
-.cid-sFGSX04rSl .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-sFGSX04rSl .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-sFGSX04rSl H6 {
-  text-align: center;
 }
 .cid-sFGSUpvomC {
   padding-top: 4rem;
@@ -1155,166 +819,63 @@ a {
 .cid-sFGSUpvomC .social-row .soc-item:hover .mbr-iconfont {
   color: #ffffff;
 }
-.cid-sFGThwwRWM {
-  padding-top: 5rem;
-  padding-bottom: 6rem;
-  background-color: #fafafa;
+.cid-sZfMi4ulsD {
+  padding-top: 6rem;
+  padding-bottom: 0rem;
+  background-color: #9fdbf8;
 }
-.cid-sFGThwwRWM .mbr-media {
-  position: relative;
+.cid-sZfMi4ulsD .image-wrap img {
+  width: 100%;
 }
-.cid-sFGThwwRWM .mbr-media img {
+@media (min-width: 992px) {
+  .cid-sZfMi4ulsD .image-wrap img {
+    display: block;
+    margin: auto;
+    width: 80%;
+  }
+}
+.cid-sZfMkWn9xI {
+  background-color: #bed3f9;
+}
+.cid-sZfMkWn9xI .row {
+  flex-direction: row-reverse;
+}
+@media (max-width: 991px) {
+  .cid-sZfMkWn9xI .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-sZfMkWn9xI .image-wrapper img {
   width: 100%;
   object-fit: cover;
 }
-.cid-sFGThwwRWM .icon-wrap {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-}
-.cid-sFGThwwRWM .mbr-media span {
-  font-size: 6rem;
-  transition: all 0.2s;
-}
-.cid-sFGThwwRWM .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-sFGThwwRWM .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-sFGThwwRWM .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-sFGThwwRWM .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-sFGThwwRWM .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-sFGTcFRqw0 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-.cid-sFGTcFRqw0 .mbr-overlay {
-  background-color: #ffffff;
-  opacity: 0.4;
-}
-.cid-sFGTcFRqw0 form .mbr-section-btn {
-  text-align: center;
-  width: 100%;
-}
-.cid-sFGTcFRqw0 form .mbr-section-btn .btn {
-  display: inline-flex;
-}
-@media (max-width: 991px) {
-  .cid-sFGTcFRqw0 form .mbr-section-btn .btn {
-    width: 100%;
+@media (min-width: 992px) {
+  .cid-sZfMkWn9xI .text-wrapper {
+    padding: 0 2rem;
   }
-}
-.cid-sFGTcFRqw0 textarea {
-  min-height: 10rem;
-}
-.cid-sFGVxOqzIN {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #fafafa;
-}
-.cid-sFGVxOqzIN .media-container-row {
-  justify-content: space-between;
-}
-.cid-sFGVxOqzIN .text-content {
-  max-width: 50%;
 }
 @media (max-width: 768px) {
-  .cid-sFGVxOqzIN .text-content {
-    max-width: none;
+  .cid-sZfMkWn9xI .text-wrapper {
+    margin-bottom: 2rem;
   }
 }
-.cid-sFGVxOqzIN .mbr-iconfont-social {
-  margin: 0.5rem;
-  font-size: 32px;
-  display: flex;
-  border-radius: 50%;
+.cid-sFGMfPD7iT {
+  padding-top: 20rem;
+  padding-bottom: 20rem;
+  background-image: url("../../../assets/images/8n0a1849-2000x1333.jpg");
+}
+.cid-sFGMfPD7iT .mbr-section-title {
   text-align: center;
-  color: #4d6d9a;
-  border: 2px solid #4d6d9a;
-  justify-content: center;
-  align-content: center;
-  transition: all 0.3s;
-}
-.cid-sFGVxOqzIN .mbr-iconfont-social:before {
-  padding: 0.6rem;
-}
-.cid-sFGVxOqzIN .mbr-iconfont-social:hover {
-  background-color: #4d6d9a;
   color: #ffffff;
 }
-@media (max-width: 768px) {
-  .cid-sFGVxOqzIN .icons {
-    justify-content: center !important;
-  }
-  .cid-sFGVxOqzIN .text-content * {
-    text-align: center;
-  }
-}
-.cid-sFGSPUeMie {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background: #ffffff;
-}
-.cid-sFGSPUeMie .google-map {
-  height: 30rem;
-  position: relative;
-}
-.cid-sFGSPUeMie .google-map iframe {
-  height: 100%;
-  width: 100%;
-}
-.cid-sFGSPUeMie .google-map [data-state-details] {
-  color: #6b6763;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
+.cid-sFGMfPD7iT .mbr-text,
+.cid-sFGMfPD7iT .mbr-section-btn {
   text-align: center;
-  top: 50%;
-  width: 100%;
+  color: #5f6366;
 }
-.cid-sFGSPUeMie .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-sFGSPUeMie .google-map[data-state="loading"] [data-state-details] {
-  display: none;
+.cid-sFGMfPD7iT .mbr-section-subtitle {
+  text-align: center;
+  color: #ffffff;
 }
 .cid-sFGSOnwtIp {
   padding-top: 30px;
