--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -700,6 +700,11 @@ a {
     padding: 0 2rem;
   }
 }
+.cid-t4qDAskOnP {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
 .cid-sFGNGNNW5A {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -758,111 +763,10 @@ a {
 .cid-sFGNGNNW5A .item-subtitle {
   text-align: left;
 }
-.cid-sFGSUpvomC {
-  padding-top: 4rem;
-  padding-bottom: 6rem;
-  background: #ffffff;
-}
-.cid-sFGSUpvomC .team-card {
-  margin-bottom: 2rem;
-  transition: all 0.3s;
-}
-.cid-sFGSUpvomC .team-card:hover {
-  transform: translateY(-10px);
-}
-.cid-sFGSUpvomC .card-wrap {
-  background: #fafafa;
-  border-radius: 4px;
-}
-@media (max-width: 991px) {
-  .cid-sFGSUpvomC .card-wrap {
-    margin-bottom: 2rem;
-  }
-}
-.cid-sFGSUpvomC .card-wrap .image-wrap img {
-  width: 100%;
-}
-@media (min-width: 768px) {
-  .cid-sFGSUpvomC .card-wrap .content-wrap {
-    padding: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sFGSUpvomC .card-wrap .content-wrap {
-    padding: 1rem;
-  }
-}
-.cid-sFGSUpvomC .social-row {
-  text-align: center;
-}
-.cid-sFGSUpvomC .social-row .soc-item {
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  margin-right: 0.6rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  border: 2px solid #6592e6;
-  transition: all 0.3s;
-}
-.cid-sFGSUpvomC .social-row .soc-item .mbr-iconfont {
-  transition: all 0.3s;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  color: #6592e6;
-  font-size: 1.5rem;
-}
-.cid-sFGSUpvomC .social-row .soc-item:hover {
-  background-color: #6592e6;
-}
-.cid-sFGSUpvomC .social-row .soc-item:hover .mbr-iconfont {
-  color: #ffffff;
-}
-.cid-sZfMi4ulsD {
-  padding-top: 6rem;
-  padding-bottom: 0rem;
-  background-color: #9fdbf8;
-}
-.cid-sZfMi4ulsD .image-wrap img {
-  width: 100%;
-}
-@media (min-width: 992px) {
-  .cid-sZfMi4ulsD .image-wrap img {
-    display: block;
-    margin: auto;
-    width: 80%;
-  }
-}
-.cid-sZfMkWn9xI {
-  background-color: #bed3f9;
-}
-.cid-sZfMkWn9xI .row {
-  flex-direction: row-reverse;
-}
-@media (max-width: 991px) {
-  .cid-sZfMkWn9xI .image-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-.cid-sZfMkWn9xI .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
-}
-@media (min-width: 992px) {
-  .cid-sZfMkWn9xI .text-wrapper {
-    padding: 0 2rem;
-  }
-}
-@media (max-width: 768px) {
-  .cid-sZfMkWn9xI .text-wrapper {
-    margin-bottom: 2rem;
-  }
-}
 .cid-sFGMfPD7iT {
   padding-top: 20rem;
   padding-bottom: 20rem;
-  background-image: url("../../../assets/images/8n0a1849-2000x1333.jpg");
+  background-image: url("../../../assets/images/8n0a1653-2000x1333.jpg");
 }
 .cid-sFGMfPD7iT .mbr-section-title {
   text-align: center;
@@ -876,6 +780,34 @@ a {
 .cid-sFGMfPD7iT .mbr-section-subtitle {
   text-align: center;
   color: #ffffff;
+}
+.cid-t4qS8Kmnl7 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-t4qS8Kmnl7 .row {
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .cid-t4qS8Kmnl7 .row {
+    flex-direction: column-reverse;
+  }
+  .cid-t4qS8Kmnl7 .image-wrapper {
+    margin-bottom: 2rem;
+  }
+  .cid-t4qS8Kmnl7 .card-wrapper {
+    padding: 0 1rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-t4qS8Kmnl7 .card-wrapper {
+    padding-right: 2rem;
+  }
+}
+.cid-t4qS8Kmnl7 .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
 }
 .cid-sFGSOnwtIp {
   padding-top: 30px;
